--- a/MarketCheckoutComponent/MarketCheckoutComponent.csproj
+++ b/MarketCheckoutComponent/MarketCheckoutComponent.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarketCheckoutComponent.Infrastructure\MarketCheckoutComponent.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
