--- a/Tests/MarketCheckoutComponent.Tests/MarketCheckoutComponent.Tests.csproj
+++ b/Tests/MarketCheckoutComponent.Tests/MarketCheckoutComponent.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MarketCheckoutComponent\MarketCheckoutComponent.csproj" />
+    <ProjectReference Include="..\..\MarketCheckoutComponent\MarketCheckoutComponent.csproj" />
   </ItemGroup>
 
 </Project>
