--- a/Market.WebApi.IntegrationTests/Market.WebApi.IntegrationTests.csproj
+++ b/Market.WebApi.IntegrationTests/Market.WebApi.IntegrationTests.csproj
@@ -7,9 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.2.0" />
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Market.WebApi\Market.WebApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="FluentAssertions">
+      <HintPath>C:\Users\PLKRKAB\.nuget\packages\fluentassertions\5.5.3\lib\netcoreapp2.0\FluentAssertions.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
