--- a/Tests/Market.WebApi.IntegrationTests/Market.WebApi.IntegrationTests.csproj
+++ b/Tests/Market.WebApi.IntegrationTests/Market.WebApi.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.2.0" />
     <PackageReference Include="nunit" Version="3.11.0" />
@@ -16,13 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Market.WebApi\Market.WebApi.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="FluentAssertions">
-      <HintPath>C:\Users\PLKRKAB\.nuget\packages\fluentassertions\5.5.3\lib\netcoreapp2.0\FluentAssertions.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\Market.WebApi\Market.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
