Extract service layer

--- a/Market.WebApi/Market.WebApi.csproj
+++ b/Market.WebApi/Market.WebApi.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Market.CheckoutComponent\Market.CheckoutComponent.csproj" />
+    <ProjectReference Include="..\Market.Services\Market.Services.csproj" />
   </ItemGroup>
 
 </Project>
